--- a/helm-guestbook/templates/cluster_analysis.yaml
+++ b/helm-guestbook/templates/cluster_analysis.yaml
@@ -12,4 +12,4 @@ spec:
       prometheus:
         address: "http://a0179abbebc504fe1a02cc2868d10d20-1436141555.us-east-2.elb.amazonaws.com:9090"
         query: |
-          rate(nginx_ingress_controller_requests{ingress="{{`{{ template "helm-guestbook.fullname" . }}`}}", controller_class="nginx",exported_namespace="{{`{{ template "helm-guestbook.fullname" . }}`}}",status!~"[4-5].*"}[1h]) / rate(nginx_ingress_controller_requests{ingress="{{`{{ template "helm-guestbook.fullname" . }}`}}", controller_class="nginx",exported_namespace="{{`{{ template "helm-guestbook.fullname" . }}`}}"}[1h])
+          rate(nginx_ingress_controller_requests{ingress="aks-guestbook-helm-guestbook", controller_class="nginx",exported_namespace="aks-guestbook-helm-guestbook",status!~"[4-5].*"}[1h]) / rate(nginx_ingress_controller_requests{ingress="aks-guestbook-helm-guestbook", controller_class="nginx",exported_namespace="aks-guestbook-helm-guestbook"}[1h])
