--- a/helm-guestbook/templates/rollout.yaml
+++ b/helm-guestbook/templates/rollout.yaml
@@ -71,8 +71,8 @@ spec:
           # The referenced ingress will be injected with a custom action annotation, directing
           # the Nginx to split traffic between the canary and stable Service using headers
           stableIngress: {{ template "helm-guestbook.fullname" . }}
-          annotationPrefix: nginx.ingress.kubernetes.io # optional
-          additionalIngressAnnotations:   # optional
+          annotationPrefix: nginx.ingress.kubernetes.io 
+          additionalIngressAnnotations:
             canary-by-header: tenantID
-            canary-by-header-value: us-east|us-west|eu|apac #TODO tenantID values
+            canary-by-header-value: 10|11|12|13 # tenantID values
             # canary-weight: 20
