--- a/helm-guestbook/templates/rollout.yaml
+++ b/helm-guestbook/templates/rollout.yaml
@@ -54,14 +54,6 @@ spec:
   minReadySeconds: 30
   strategy:
     canary: #Indicates that the rollout should use the Canary strategy
-      analysis:
-        templates:
-        - templateName: success-rate
-          clusterScope: true
-        startingStep: 2 # delay starting analysis run until setWeight: 40%
-        args:
-        - name: service-name
-          value: {{ template "helm-guestbook.fullname" . }}
       maxSurge: "25%"
       maxUnavailable: 0
       canaryService: guestbook-canary-service
@@ -75,4 +67,15 @@ spec:
           additionalIngressAnnotations:
             canary-by-header: tenantID
             canary-by-header-value: 10|11|12|13 # tenantID values
-            canary-weight: "20"
+      steps:
+      - setCanaryScale:
+          weight: 50
+      - analysis:
+          templates:
+          - templateName: success-rate
+            clusterScope: true
+          args:
+          - name: service-name
+            value: {{ template "helm-guestbook.fullname" . }}
+      # Pauses indefinitely until manually resumed
+      - pause: {}
