--- a/helm-guestbook/templates/cluster_analysis.yaml
+++ b/helm-guestbook/templates/cluster_analysis.yaml
@@ -10,6 +10,6 @@ spec:
     successCondition: isNaN(result[0]) || result[0] >= 0.10
     provider:
       prometheus:
-        address: "a0179abbebc504fe1a02cc2868d10d20-1436141555.us-east-2.elb.amazonaws.com:9090"
+        address: "http://a0179abbebc504fe1a02cc2868d10d20-1436141555.us-east-2.elb.amazonaws.com:9090"
         query: |
           nginx_ingress_controller_requests{ingress="guestbook-helm-guestbook", controller_class="nginx",exported_namespace="guestbook-helm-guestbook",status=~"[2].*"}[5m]
