--- a/helm-guestbook/templates/rollout.yaml
+++ b/helm-guestbook/templates/rollout.yaml
@@ -66,7 +66,7 @@ spec:
           annotationPrefix: nginx.ingress.kubernetes.io 
           additionalIngressAnnotations:
             canary-by-header: tenantID
-            canary-by-header-value: 10|11|12|13 # tenantID values
+            canary-by-header-value: 10 # tenantID values
       steps:
       - setCanaryScale:
           weight: 50
