--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -24,6 +24,12 @@ ingress:
     # nginx.ingress.kubernetes.io/canary-by-header: "Region"
     # nginx.ingress.kubernetes.io/canary-by-header-pattern: "aspc|eu"
     # kubernetes.io/tls-acme: "true"
+  canary:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/canary: 'true'
+    nginx.ingress.kubernetes.io/canary-by-header: tenantID
+    nginx.ingress.kubernetes.io/canary-by-header-pattern: 10|11
+    nginx.ingress.kubernetes.io/canary-weight: '30'
   path: /
   # hosts:
   #   - chart-example.local
