--- a/helm-guestbook/templates/canary-ingress.yaml
+++ b/helm-guestbook/templates/canary-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: {{ template "helm-guestbook.fullname" . }}
+  name: {{ template "helm-guestbook.fullname" . }}-canary
   namespace: {{ template "helm-guestbook.fullname" . }}
   {{- with .Values.ingress.canary }}
   annotations:
