--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -28,7 +28,7 @@ ingress:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/canary: 'true'
     nginx.ingress.kubernetes.io/canary-by-header: tenantID
-    nginx.ingress.kubernetes.io/canary-by-header-pattern: 10.21
+    nginx.ingress.kubernetes.io/canary-by-header-pattern: 10|21
     nginx.ingress.kubernetes.io/canary-weight: '30'
   path: /
   # hosts:
