--- a/helm-guestbook/templates/cluster_analysis.yaml
+++ b/helm-guestbook/templates/cluster_analysis.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ClusterAnalysisTemplate
 metadata:
-  name: success-rate
+  name: {{ template "helm-guestbook.fullname" . }}
 spec:
   args:
   - name: service-name
   metrics:
-  - name: success-rate
+  - name: {{ template "helm-guestbook.fullname" . }}
     successCondition: result[0] >= 0.00001
     provider:
       prometheus:
