--- a/helm-guestbook/templates/rollout.yaml
+++ b/helm-guestbook/templates/rollout.yaml
@@ -73,7 +73,7 @@ spec:
       - setWeight: 50
       - analysis:
           templates:
-          - templateName: success-rate
+          - templateName: {{ template "helm-guestbook.fullname" . }}
             clusterScope: true
           args:
           - name: service-name
