--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -7,6 +7,7 @@ replicaCount: 3
 image:
   repository: gcr.io/heptio-images/ks-guestbook-demo
   tag: 0.2
+  canaryTag: 0.1
   pullPolicy: IfNotPresent
 
 service:
