--- a/helm-guestbook/templates/canary_service.yaml
+++ b/helm-guestbook/templates/canary_service.yaml
@@ -18,4 +18,4 @@ spec:
   selector:
     app: {{ template "helm-guestbook.name" . }}
     release: {{ .Release.Name }}
-    version: canary
+    # version: canary
