--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -10,6 +10,10 @@ image:
   canaryTag: 0.2
   pullPolicy: IfNotPresent
 
+deployment: []
+#  annotations:
+    
+
 service:
   type: NodePort
   port: 80
