--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -32,7 +32,7 @@ ingress:
   canary:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/canary: 'true'
-    nginx.ingress.kubernetes.io/canary-by-header: tenantID
+    nginx.ingress.kubernetes.io/canary-by-header: tenants
     nginx.ingress.kubernetes.io/canary-by-header-pattern: 10|21
   path: /
   # hosts:
