--- a/helm-guestbook/templates/service.yaml
+++ b/helm-guestbook/templates/service.yaml
@@ -8,7 +8,7 @@ metadata:
     chart: {{ template "helm-guestbook.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    version: stable
+    # version: stable
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -19,4 +19,4 @@ spec:
   selector:
     app: {{ template "helm-guestbook.name" . }}
     release: {{ .Release.Name }}
-    version: stable
+    # version: stable
