--- a/helm-guestbook/templates/canary_deployment.yaml
+++ b/helm-guestbook/templates/canary_deployment.yaml
@@ -22,7 +22,7 @@ spec:
         release: {{ .Release.Name }}
     spec:
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ .Chart.Name }}-canary
           image: "{{ .Values.image.repository }}:{{ .Values.image.canaryTag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
