--- a/helm-guestbook/templates/deployment.yaml
+++ b/helm-guestbook/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "helm-guestbook.fullname" . }}
   namespace: {{ template "helm-guestbook.fullname" . }}
   labels:
-    app: {{ template "helm-guestbook.name" . }}
+    # app: {{ template "helm-guestbook.name" . }}
     chart: {{ template "helm-guestbook.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
