--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -32,8 +32,8 @@ ingress:
   canary:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/canary: 'true'
-    nginx.ingress.kubernetes.io/canary-by-header: tenants
-    nginx.ingress.kubernetes.io/canary-by-header-pattern: 10|21
+    nginx.ingress.kubernetes.io/canary-by-header: 'tenants'
+    nginx.ingress.kubernetes.io/canary-by-header-pattern: '10|21'
   path: /
   # hosts:
   #   - chart-example.local
