--- a/helm-guestbook/templates/ingress.yaml
+++ b/helm-guestbook/templates/ingress.yaml
@@ -14,6 +14,7 @@ spec:
   - http:
       paths:
       - path: {{ .Values.ingress.path }}
+      pathType: Prefix
         backend:
           # serviceName must match canary.stableService
           service:
