--- a/helm-guestbook/templates/ingress.yaml
+++ b/helm-guestbook/templates/ingress.yaml
@@ -13,8 +13,8 @@ spec:
   # - host: argo.cirruslabs.io
   - http:
       paths:
-      - path: {{ .Values.ingress.path }}
-      pathType: Prefix
+      - pathType: Prefix
+        path: {{ .Values.ingress.path }}
         backend:
           # serviceName must match canary.stableService
           service:
