--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -31,9 +31,9 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   canary:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/canary: 'true'
-    nginx.ingress.kubernetes.io/canary-by-header: 'tenants'
-    nginx.ingress.kubernetes.io/canary-by-header-pattern: 'a|b'
+    nginx.ingress.kubernetes.io/canary: "true"
+    nginx.ingress.kubernetes.io/canary-by-header: "tenants"
+    nginx.ingress.kubernetes.io/canary-by-header-pattern: "a|b"
   path: /
   # hosts:
   #   - chart-example.local
