--- a/helm-guestbook/templates/ingress.yaml
+++ b/helm-guestbook/templates/ingress.yaml
@@ -10,8 +10,8 @@ metadata:
   {{- end }}
 spec:
   rules:
-  # - host: argo.cirruslabs.io
-  - http:
+  - host: {{ .Values.ingress.host }}
+    http:
       paths:
       - pathType: Prefix
         path: {{ .Values.ingress.path }}
