--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -35,8 +35,7 @@ ingress:
     nginx.ingress.kubernetes.io/canary-by-header: "tenants"
     nginx.ingress.kubernetes.io/canary-by-header-pattern: "10|11|12"
   path: /
-  host:
-    - "guestbook.3.130.54.83.nip.io"
+  host: guestbook.3.130.54.83.nip.io
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
