--- a/helm-guestbook/templates/ingress.yaml
+++ b/helm-guestbook/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "helm-guestbook.fullname" . }}
@@ -13,12 +13,9 @@ spec:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
-      - pathType: Prefix
-        path: {{ .Values.ingress.path }}
+      - path: {{ .Values.ingress.path }}
         backend:
           # serviceName must match canary.stableService
-          service:
-            name: {{ template "helm-guestbook.fullname" . }}
-            port:
-              number: {{ .Values.service.port }}
+          serviceName: {{ template "helm-guestbook.fullname" . }}
+          servicePort: {{ .Values.service.port }}
 {{- end }}
