--- a/helm-guestbook/templates/cluster_analysis.yaml
+++ b/helm-guestbook/templates/cluster_analysis.yaml
@@ -11,6 +11,6 @@ spec:
     successCondition: result[0] >= 0.01
     provider:
       prometheus:
-        address: "http://52.149.216.245:9090"
+        address: "http://a0179abbebc504fe1a02cc2868d10d20-1436141555.us-east-2.elb.amazonaws.com:9090/"
         query: |
           rate(nginx_ingress_controller_requests{ingress="aks-guestbook-helm-guestbook", controller_class="nginx",exported_namespace="aks-guestbook-helm-guestbook",status=~"[2].*"}[1h])
