--- a/helm-guestbook/templates/rollout.yaml
+++ b/helm-guestbook/templates/rollout.yaml
@@ -17,10 +17,10 @@ spec:
       release: {{ .Release.Name }}
   template:
     metadata:
-      {{- with .Values.deployment.annotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+      # {{- with .Values.deployment.annotations }}
+      # annotations:
+      #   {{- toYaml . | nindent 8 }}
+      # {{- end }}
       labels:
         app: {{ template "helm-guestbook.name" . }}
         release: {{ .Release.Name }}
